# CppCore

./: CMakeLists.txt  CppCore.cmake  Doxyfile.in  Readme.md  grammar.g4
.github/workflows/: check-and-build.yml  doxygen-gh-pages.yml
dockerfiles/cidmol-build/: Dockerfile
src/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  ast.cpp  astModule.cpp  tokens.cpp
src/compiler/frontend/: CMakeLists.txt  frontend.cpp  parser.cpp
src/core/: CMakeLists.txt  allocs.cpp  builtins.cpp  core.cpp  cstring.cpp  demangler.cpp  elf64.cpp  errors.cpp  functions.cpp  initializerList.cpp  ioUtils.cpp  logger.cpp  loggerImpl.cpp  logicalResult.cpp  main.cpp  map.cpp  pair.cpp  set.cpp  sharedPtr.cpp  start.S  start.cpp  start_linux_x86_64.S  stream.cpp  string.cpp  stringLiteral.cpp  syscalls.cpp  syscalls_linux_x86_64.cpp  tests.cpp  threads.cpp  traits.cpp  types.cpp  uniquePtr.cpp  unmangler.cpp  variant.cpp  vector.cpp  zip.cpp
src/gssa/: CMakeLists.txt
tests/core/: CMakeLists.txt  testDemangler.cpp
